--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -3,68 +3,90 @@
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".NewQueueView"
     android:weightSum="1"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="172dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.26"
-        style="@style/header_text_style"
-        android:text="@string/welcome_text"
-        android:id="@+id/welcome_text_view"
-         />
-
-    <TextView
-        android:layout_width="258dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.11"
-        android:gravity="top|center_horizontal"
-        style="@style/normal_text_style"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/num_in_queue_textview"
-        android:text="Reserve a place,\n don&apos;t wait in line."
-        android:layout_gravity="center_horizontal"
-         />
-
     <FrameLayout
-        android:layout_width="250sp"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center_horizontal" >
+        android:layout_weight="0.20"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
 
-        <ImageButton
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/add_to_queue_image_button"
-            android:src="@drawable/add_to_queue_button_selector"
-            android:background="@null"
-            android:scaleType="fitStart"
-            android:adjustViewBounds="true"
-             />
-        <!--fresco:placeholderImage="@drawable/waiting_animation-->
-        <!--<com.facebook.drawee.view.SimpleDraweeView-->
-            <!--android:id="@+id/loading_animation"-->
-            <!--android:layout_width="296dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_gravity="center_horizontal|top" />-->
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.7"
+                android:scaleType="fitEnd"
+                android:id="@+id/add_to_queue_activity_logo_image_view" />
+            <!--android:src="@drawable/logo_hm"-->
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15"/>
+
+        </LinearLayout>
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/headerTextStyle"
+            android:gravity="bottom|center_horizontal"
+            android:text="@string/add_to_queue_activity_welcome_title"
+            android:id="@+id/add_to_queue_header_text_view"
+            />
+
     </FrameLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_weight="0.10"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.15"
+        android:gravity="center_vertical|center_horizontal"
+        style="@style/subheaderTextStyle"
+        android:id="@+id/add_to_queue_subtitle_text_view"
+        android:text="@string/add_to_queue_activity_welcome_subtitle"
         android:layout_gravity="center_horizontal"
-        android:gravity="top"
-        style="@style/normal_text_style"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Searching for a Queue"
-        android:id="@+id/bottom_text_view"
          />
+
+
+    <ImageButton
+        android:layout_weight="0.4"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/add_to_queue_image_button"
+        android:src="@drawable/add_to_queue_button_selector"
+        android:background="@null"
+        android:scaleType="fitCenter"
+         />
+
+    <TextView
+        android:layout_weight="0.20"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="bottom|center_horizontal"
+        style="@style/subheaderTextStyle"
+        android:text="@string/add_to_queue_activity_footer"
+        android:id="@+id/add_to_queue_footer_text_view"
+         />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:layout_gravity="center_horizontal|bottom" />
+
 
 </LinearLayout>
