--- a/Queuee2/app/src/main/res/values-v21/styles.xml
+++ b/Queuee2/app/src/main/res/values-v21/styles.xml
@@ -13,14 +13,28 @@
         <item name="android:displayOptions">showCustom</item>
     </style>
 
-    <style name="header_text_style">
+    <!--<style name="header_text_style">-->
+        <!--<item name="android:fontFamily">sans-serif-medium</item>-->
+        <!--<item name="android:textStyle">bold|italic</item>-->
+        <!--<item name="android:textSize">34sp</item>-->
+        <!--<item name="android:rotation">-10</item>-->
+        <!--<item name="android:textColor">#143438</item>-->
+        <!--<item name="android:gravity">center</item>-->
+        <!--<item name="android:layout_gravity">center_horizontal</item>-->
+    <!--</style>-->
+
+    <style name="headerTextStyle">
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">bold|italic</item>
-        <item name="android:textSize">34sp</item>
-        <item name="android:rotation">-10</item>
-        <item name="android:textColor">#000000</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textSize">43sp</item>
+        <item name="android:textColor">#143438</item>
+    </style>
+
+    <style name="subheaderTextStyle">
+        <item name="android:fontFamily">sans-serif</item>
+        <!--<item name="android:textStyle">italic</item>-->
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#143438</item>
     </style>
 
     <style name="normal_text_style">
