--- a/CashierQueuee/app/src/main/res/values-v21/styles.xml
+++ b/CashierQueuee/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+
+    <style name="AppTheme" parent="android:Theme.Material.Light">
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:actionBarStyle">@style/whiteActionBarStyle</item>
+    </style>
+
+    <style name="whiteActionBarStyle" parent="@android:style/Widget.Material.Light.ActionBar">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:displayOptions">showCustom</item>
     </style>
 
     <style name="header_text_style">
