--- a/CashierQueuee/app/src/main/res/values/styles.xml
+++ b/CashierQueuee/app/src/main/res/values/styles.xml
@@ -4,6 +4,12 @@
     <style name="AppTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/white</item>
+        <item name="android:actionBarStyle">@style/whiteActionBarStyle</item>
+    </style>
+
+    <style name="whiteActionBarStyle" parent="@android:style/Widget.Material.Light.ActionBar" >
+        <item name="android:background">@android:color/white</item>
+        <item name="android:displayOptions">showCustom</item>
     </style>
 
     <style name="header_text_style">
