--- a/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
+++ b/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
@@ -1,65 +1,88 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
     android:orientation="vertical"
+    android:weightSum="1"
     tools:context="com.example.abraham.cashierqueuee.QueueInProgressActivity">
 
-    <TextView
-        android:layout_width="132dp"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
-        android:layout_gravity="bottom|center_horizontal"
-        style="@style/in_queue_header_text_style"
-        android:id="@+id/activity_queue_in_progress_textview_number_in_queue"
-        />
+        android:layout_weight="0.20">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.15" />
+
+        <TextView
+            android:id="@+id/activity_queue_in_progress_textview_number_in_queue"
+            style="@style/in_queue_header_text_style"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
+            android:scaleType="fitEnd" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.15" />
+
+</LinearLayout>
+
+    </FrameLayout>
+
 
     <TextView
+        android:id="@+id/queue_in_progress_textview_cashier_number"
+        style="@style/normal_text_style"
         android:layout_width="172dp"
         android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="0.1"
-        style="@style/normal_text_style"
-        android:gravity="top|center_horizontal"
-        android:id="@+id/queue_in_progress_textview_cashier_number"
-        android:layout_gravity="center_horizontal" />
+        android:gravity="top|center_horizontal" />
 
     <ImageButton
+        android:id="@+id/activity_queue_in_progress_image_button_next"
         android:layout_width="200sp"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:id="@+id/activity_queue_in_progress_image_button_next"
-        android:src="@drawable/next_button_selector"
-        android:background="@null"
         android:layout_gravity="center_horizontal"
-        android:scaleType="fitStart"
+        android:layout_weight="0.4"
         android:adjustViewBounds="true"
-        />
+        android:background="@null"
+        android:scaleType="fitStart"
+        android:src="@drawable/next_button_selector" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.15"/>
+        android:layout_weight="0.15" />
 
     <ImageButton
+        android:id="@+id/finish_queue_image_button"
         android:layout_width="150sp"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:id="@+id/finish_queue_image_button"
-        android:src="@drawable/stop_button_selector"
-        android:background="@null"
         android:layout_gravity="center_horizontal"
-        android:scaleType="fitStart"
+        android:layout_weight="0.4"
         android:adjustViewBounds="true"
-        />
+        android:background="@null"
+        android:scaleType="fitStart"
+        android:src="@drawable/stop_button_selector" />
 
     <TextView
+        android:id="@+id/start_queue_text"
+        style="@style/header_text_style"
         android:layout_width="172dp"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        style="@style/header_text_style"
-        android:text="@string/cashier_number"
         android:gravity="top|center_horizontal"
-        android:id="@+id/start_queue_text"
-        />
+        android:text="@string/cashier_number" />
 
 </LinearLayout>
