--- a/CashierQueuee/app/src/main/res/layout/activity_start_queue.xml
+++ b/CashierQueuee/app/src/main/res/layout/activity_start_queue.xml
@@ -1,50 +1,69 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
     tools:context="com.example.abraham.cashierqueuee.StartQueueActivity">
 
-    <TextView
-        android:layout_width="132dp"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
-        android:layout_gravity="bottom|center_horizontal"
-        style="@style/start_queue_header_text_style"
-        android:text="@string/cashier_text"
-        android:id="@+id/cashier_text_view"
-        />
+        android:layout_weight="0.20">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15" />
+
+            <ImageView
+                android:id="@+id/activity_start_queue_image_view_which_shop"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.7"
+                android:scaleType="fitEnd" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <TextView
-        android:layout_width="172dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        style="@style/normal_text_style"
-        android:text=" "
-        android:gravity="top|center_horizontal"
         android:id="@+id/cashier_number"
-        android:layout_gravity="center_horizontal" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.10"
+        style="@style/normal_text_style"
+        android:gravity="top|center_horizontal"
+        android:text="" />
+
 
     <ImageButton
-        android:layout_width="250sp"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
         android:id="@+id/start_queue_image_button"
-        android:src="@drawable/start_button_selector"
+        android:layout_weight="0.4"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="@null"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="fitStart"
-        android:adjustViewBounds="true"
-        />
+        android:scaleType="fitCenter"
+        android:src="@drawable/start_button_selector" />
 
     <TextView
-        android:layout_width="172dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:text="@string/start_queue_text"
-        style="@style/normal_text_style"
-        android:gravity="top|center_horizontal"
         android:id="@+id/start_queue_text"
-        android:layout_gravity="center_horizontal" />
+        style="@style/subheaderTextStyle"
+        android:layout_weight="0.20"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="bottom|center_horizontal"
+        android:text="@string/start_queue_text" />
 
 </LinearLayout>
