--- a/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
+++ b/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
@@ -51,7 +51,7 @@
                 android:gravity="center"
                 android:id="@+id/action_bar_title_text"
                 style="@style/subheaderTextStyle"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:text="@string/app_name"/>
 
         </FrameLayout>
